@@ -1,3 +1,3 @@
 @echo off
 chcp 65001
-java -jar "%~dp0game.jar"
+java --enable-native-access=ALL-UNNAMED -jar "%~dp0game.jar"
